# drm.igt-gpu-tools

./: .checkpatch.conf  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile.build-buildah  Dockerfile.build-debian  Dockerfile.build-debian-arm64  Dockerfile.build-debian-armhf  Dockerfile.build-debian-minimal  Dockerfile.build-fedora  MAINTAINERS  NEWS  README.md  meson.build  meson_options.txt
.github/: copilot-instructions.md
.gitlab-ci/: pull-or-rebuild.sh
benchmarks/: gem_latency.c  gem_wsim.c  meson.build  xe_blt.c  xe_create.c  xe_exec_ctx.c
data/: meson.build
docs/: chamelium.txt  code_coverage.md  xe_fault_injection_device_management.md
include/: intel_gpu_commands.h
lib/: drmtest.c  drmtest.h  gpgpu_fill.c  gpgpu_fill.c.gen.iga64_codes.c  gpgpu_fill.h  gpgpu_shader.c  gpgpu_shader.c.gen.iga64_codes.c  gpgpu_shader.h  gpu_cmds.c  gpu_cmds.h  i915_pciids_local.h  iga64_generated_codes.c  iga64_macros.h  igt.h  igt_amd.c  igt_amd.h  igt_aux.c  igt_aux.h  igt_chamelium.c  igt_chamelium.h  igt_configfs.c  igt_configfs.h  igt_core.c  igt_core.h  igt_debugfs.c  igt_debugfs.h  igt_device_scan.c  igt_device_scan.h  igt_dir.c  igt_dir.h  igt_draw.c  igt_draw.h  igt_drm_fdinfo.c  igt_drm_fdinfo.h  igt_dsc.c  igt_dsc.h  igt_dummyload.c  igt_edid.c  igt_edid.h  igt_facts.c  (+89 more)
man/: intel_reg.rst  lsgpu.rst  meson.build
opencl/: loop.cl  loop_count.cl
runner/: executor.c  executor.h  kmemleak.c  kmemleak.h  meson.build  output_strings.h  resultgen.c  resume.c  runner.c  runner_kmemleak_test.c  runner_tests.c  settings.c  settings.h
tests/intel-ci/: README  blacklist-pre-merge.txt  blacklist.txt  chamelium-only.testlist  fast-feedback-chamelium-only.testlist  fast-feedback.testlist  i915.blocklist-pre-merge.txt  i915.blocklist.txt  i915.chamelium-only.testlist  i915.fast-feedback.testlist  meson.build  xe-fast-feedback.testlist  xe-sriov-vf.blocklist.txt  xe-sriov-vm.blocklist.txt  xe.blocklist.txt  xe.bmg.core.blocklist.txt  xe.bmg.display.blocklist.txt  xe.bmg.eudebug.blocklist.txt  xe.eudebug.blocklist.txt  xe.lnl.core.blocklist.txt  xe.lnl.display.blocklist.txt  xe.lnl.eudebug.blocklist.txt  xe.multigpu.blocklist.txt  xe.ptl.core.blocklist.txt  xe.ptl.display.blocklist.txt
tests/panfrost/: meson.build
tests/vkms/: meson.build  vkms_configfs.c
tests/vmwgfx/: meson.build  vmw_execution_buffer.c  vmw_mob_stress.c  vmw_prime.c  vmw_ref_count.c  vmw_surface_copy.c  vmw_tri.c
tools/vmtb/: MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  vmtb_config.json
tools/vmtb/bench/: __init__.py  exceptions.py
tools/vmtb/bench/configurators/: pci.py  vgpu_profile.py  vgpu_profile_config.py  vmtb_config.py
tools/vmtb/bench/drivers/: driver_interface.py  xe.py
tools/vmtb/bench/executors/: executor_interface.py  gem_wsim.py  igt.py  shell.py
tools/vmtb/bench/helpers/: helpers.py  log.py
tools/vmtb/bench/machines/: device_interface.py  host.py  machine_interface.py
tools/vmtb/bench/machines/physical/: device.py
tools/vmtb/bench/machines/virtual/: vm.py
tools/vmtb/bench/machines/virtual/backends/: backend_interface.py  guestagent.py  qmp_monitor.py
tools/vmtb/vmm_flows/: conftest.py  test_basic.py
tools/vmtb/vmm_flows/resources/vgpu_profiles/: Flex170.json
(+442 files in other folders)
