# Keep alphabetically sorted by default

intelci_files = [
  'README',
  'blacklist.txt',
  'blacklist-pre-merge.txt',
  'chamelium-only.testlist',
  'fast-feedback.testlist',
  'fast-feedback-chamelium-only.testlist',
  'meta.testlist',
  'xe.blocklist.txt',
  'xe.bmg.core.blocklist.txt',
  'xe.bmg.display.blocklist.txt',
  'xe.lnl.core.blocklist.txt',
  'xe.lnl.display.blocklist.txt',
  'xe-fast-feedback.testlist',
  'xe-fast-feedback-chamelium-only.testlist',
  'xe-sriov-vf.blocklist.txt',
  'xe-sriov-vm.blocklist.txt',
]

install_data(sources : intelci_files, install_dir : datadir)
