# Keep alphabetically sorted by default

intelci_files = [
  'README',
  'blacklist.txt',
  'blacklist-pre-merge.txt',
  'i915.blocklist.txt',
  'i915.blocklist-pre-merge.txt',
  'i915.chamelium-only.testlist',
  'i915.fast-feedback.testlist',
  'i915.fast-feedback-chamelium-only.testlist',
  'meta.testlist',
  'xe.blocklist.txt',
  'xe.bmg.core.blocklist.txt',
  'xe.bmg.display.blocklist.txt',
  'xe.bmg.eudebug.blocklist.txt',
  'xe.eudebug.blocklist.txt',
  'xe.lnl.core.blocklist.txt',
  'xe.lnl.display.blocklist.txt',
  'xe.lnl.eudebug.blocklist.txt',
  'xe-fast-feedback.testlist',
  'xe-fast-feedback-chamelium-only.testlist',
  'xe-sriov-vf.blocklist.txt',
  'xe-sriov-vm.blocklist.txt',
]

install_data(sources : intelci_files, install_dir : datadir)
