[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vmtb"
version = "1.0.0"
description = "SR-IOV VM-level test tool"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  {name = "Intel Corporation"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
